trying to fix flex-wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ nav ul li {
 }
 
 footer {
-    background-color: #666;
+    background-color: #666666;
     height: 516px;
 }
 
@@ -172,11 +172,20 @@ footer {
 }
 
 .flash-card h3{
-
+    color: #fff;
+    font-size: 26px;
+    line-height: 36px;
+    font-weight: 500;
+    padding-bottom: 30px;
+    text-transform: capitalize;
 }
 
 .flash-card p{
-
+    color: #fff;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 30px !important;
+    margin: 0 0 10px;
 }
 
 
@@ -185,13 +194,49 @@ footer {
     background-color: #fff;
 }
 
-/* Sandals */
-
-
-
-.flex{
-    display: flex;
+.testimonial-title{
+    padding-top: 26px;
+    margin-top: 30px;
+    color: #000;
+    font-size: 36px;
+    line-height: 46px;
+    font-weight: 700;
+    padding-bottom: 30px;
+    text-transform: capitalize;
+    margin-bottom: 10px !important;
 }
+
+.testimonial-text{
+    color: #5d5c5c;
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 30px !important;
+}
+
+/* Footer Section */
+
+.footer-section h1{
+    color: #939191;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+    padding: 10px 0;
+    text-transform: uppercase;
+}
+
+.footer-section ul li{
+    font-size: 14px;
+    line-height: 24px;
+    color: #fff;
+}
+
+@media only screen and (max-width: 600px) {
+    .card {
+        flex:0 0 100%
+    }
+  }
+
+/* Sandals */
 
 
 
